[gd_scene load_steps=22 format=3 uid="uid://b8tl5dqihnok2"]

[ext_resource type="Script" uid="uid://dqwdw4o4d26ya" path="res://scripts/enemy_shooter.gd" id="1_y1hi4"]
[ext_resource type="PackedScene" uid="uid://t6qqpcoyy6dm" path="res://enemy/enemy_bullet.tscn" id="2_x8wwt"]
[ext_resource type="Texture2D" uid="uid://b65cmo60xybp4" path="res://graphics/enemies/enemy1/enemy1_sprite_01.png" id="2_y1hi4"]
[ext_resource type="AudioStream" uid="uid://sfe75pkghb70" path="res://audio/sfx/sfx_enemy_idle1.mp3" id="3_v7sir"]
[ext_resource type="Texture2D" uid="uid://c7jo7l0ed3ce0" path="res://graphics/enemies/enemy1/enemy1_sprite_02.png" id="3_x8wwt"]
[ext_resource type="AudioStream" uid="uid://coawmknvyg73q" path="res://audio/sfx/hit_hurt/hitHurt (1).wav" id="4_58hks"]
[ext_resource type="Texture2D" uid="uid://cnsq1c6nh0v6w" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_01_v1.png" id="5_450rj"]
[ext_resource type="AudioStream" uid="uid://rghhmxcvoo5d" path="res://audio/sfx/hit_hurt/hitHurt (3).wav" id="5_mak8r"]
[ext_resource type="AudioStream" uid="uid://d1nm5cmdpstd" path="res://audio/sfx/Footsteps_U/grass_001_23185.mp3" id="6_qyvnv"]
[ext_resource type="Texture2D" uid="uid://kmklbde4dcvn" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_02_v1.png" id="6_sfu42"]
[ext_resource type="Texture2D" uid="uid://mwg3rxasoq7l" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_03_v1.png" id="7_m8tk7"]
[ext_resource type="AudioStream" uid="uid://d8qata64535u" path="res://audio/sfx/Footsteps_U/grass_011_23195.mp3" id="7_m10nu"]
[ext_resource type="Texture2D" uid="uid://b2sqoexe2p14y" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_04_v1.png" id="8_5wtk3"]
[ext_resource type="AudioStream" uid="uid://b8phaudywrgq0" path="res://audio/sfx/Footsteps_U/grass_013_23197.mp3" id="8_7wl3g"]
[ext_resource type="Texture2D" uid="uid://dicx17w4j5dg4" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_05_v1.png" id="9_rgq2c"]
[ext_resource type="AudioStream" uid="uid://d3xekf1n6wys2" path="res://audio/sfx/laser_shoot/laserShoot (1).wav" id="9_xthaw"]
[ext_resource type="Texture2D" uid="uid://dn04hog0ktrk4" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_06_v1.png" id="10_sok6x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ffj3o"]
radius = 21.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ld2qc"]
radius = 20.0087

[sub_resource type="SpriteFrames" id="SpriteFrames_ge483"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y1hi4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y1hi4")
}, {
"duration": 1.0,
"texture": ExtResource("3_x8wwt")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3m4hl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_450rj")
}, {
"duration": 1.0,
"texture": ExtResource("6_sfu42")
}, {
"duration": 1.0,
"texture": ExtResource("7_m8tk7")
}, {
"duration": 1.0,
"texture": ExtResource("8_5wtk3")
}, {
"duration": 1.0,
"texture": ExtResource("9_rgq2c")
}, {
"duration": 1.0,
"texture": ExtResource("10_sok6x")
}],
"loop": false,
"name": &"bloodsplatter",
"speed": 24.0
}]

[node name="EnemyShooting" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_y1hi4")
bullet_scene = ExtResource("2_x8wwt")
idle_sound = ExtResource("3_v7sir")
idle_volume = -10.0
hurt_sound = ExtResource("4_58hks")
hurt_volume = -20.0
death_sound = ExtResource("5_mak8r")
death_volume = -10.0
walk_sound_1 = ExtResource("6_qyvnv")
walk_sound_2 = ExtResource("7_m10nu")
walk_sound_3 = ExtResource("8_7wl3g")
walk_volume = -15.0
shoot_sound = ExtResource("9_xthaw")
shoot_volume = -15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 3.8147e-06)
scale = Vector2(1.0869565, 1.0869565)
texture = ExtResource("2_y1hi4")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ffj3o")

[node name="WallRayRight" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="WallRayLeft" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="LedgeRayRight" type="RayCast2D" parent="."]
position = Vector2(20, 0)
collision_mask = 9

[node name="LedgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
collision_mask = 9

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(1.8, 1.56)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_ld2qc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_ge483")
animation = &"walk"
frame_progress = 0.98511744

[node name="BulletSpawnPoint" type="Node2D" parent="."]
position = Vector2(51, 0)
rotation = -1.5707964

[node name="DetectionRayRight" type="RayCast2D" parent="."]
position = Vector2(0, -13)
rotation = -1.5707964
target_position = Vector2(0, 235.765)

[node name="DetectionRayLeft" type="RayCast2D" parent="."]
position = Vector2(0, -13)
rotation = 1.5707964
target_position = Vector2(0, 235.765)

[node name="BloodSplatter" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_3m4hl")
animation = &"bloodsplatter"

[node name="IdlePlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
